# PandasPlayground

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  STREAMLIT_App.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml
assets/: PROJECT_PREVIEW_PLACEHOLDER.md  agg_loan_by_region.csv  agg_merged_weather_covid_monthly.csv  agg_monthly_sales.csv  covid_cleaned.csv  covid_country_summary.csv  covid_final.csv  covid_monthly_summary.csv  loan_agg_by_age.csv  loan_agg_by_purpose.csv  loan_all_combined.csv  loan_cleaned.csv  loan_cleaned_east.csv  loan_cleaned_north.csv  loan_cleaned_south.csv  loan_cleaned_west.csv  loan_final.csv  loan_final_all_regions.csv  loan_final_east.csv  loan_final_north.csv  loan_final_south.csv  loan_final_west.csv  merged_region_sales_loans.csv  merged_sales_covid.csv  superstore_agg_category.csv  superstore_category_stats_flattened.csv  superstore_category_stats_unflattened.csv  superstore_cleaned.csv  superstore_monthly_sales.csv  superstore_region_segment_sales.csv  superstore_sales_pivot_melted.csv  superstore_sales_pivot_region_category.csv  superstore_sales_pivot_segment_subcategory.csv  superstore_sales_stacked_by_category.csv  weather_cleaned.csv  weather_condition_stats.csv  weather_final.csv  weather_monthly_summary.csv
cheatsheets/: pandas_cheatsheet.md
data/: bank_loans.xlsx  bank_loans_multisheet.xlsx  covid_data.parquet  superstore_sales.csv  weather_data.json
docs/: DATA_DICTIONARY.md  NOTEBOOK_TEMPLATE.ipynb  PERFORMANCE.md  PROJECT_COMPLETION_SUMMARY.md
exports/: final_custom_styled.xlsx  final_merged_pipeline.csv  loan_optimized.csv  report_final.csv  report_final.parquet  report_final.xlsx  styled_report.xlsx  superstore_optimized.csv
notebooks/: 01_data_loading.ipynb  02_data_cleaning.ipynb  03_aggregation_grouping.ipynb  04_merging_joining.ipynb  05_time_series.ipynb  06_advanced_pandas.ipynb  07_visualization_with_pandas.ipynb  08_final_pipeline.ipynb  09_reporting_exporting.ipynb  10_performance_diagnostics.ipynb
pages/: 1_Sales_Trends.py  2_Profit_Insights.py  3_Raw_Data.py  4_About_This_App.py
scripts/: __init__.py  agg_utils.py  cleaning_utils.py  export_df.py  generate_mock_data.py  optimize_memory.py  setup.sh  test_utils.py  utils_io.py
